rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__file_mask_focused_ok_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌File Mask Filter──────────────────────────────────────────────────────┐                        ",
        "                        │                                                                      │                        ",
        "                        │  Enter file mask (* = any chars, ? = single char):                   │                        ",
        "                        │  test*                                                               │                        ",
        "                        │  Multiple patterns: *.txt *.doc                                      │                        ",
        "                        │  Exclusion: :*.txt :temp*                                            │                        ",
        "                        │  Regexp: /.*\.json$/ /TEST/i /Test/                                  │                        ",
        "                        │                                                                      │                        ",
        "                        │                           [*OK*]  [Cancel]                           │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 41, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 20, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 58, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
